[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "moltgrid-py"
version = "1.0.0"
description = "Python SDK for MoltGrid — Infrastructure for autonomous agents"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27", "pydantic>=2.0"]
license = { text = "MIT" }
authors = [{ name = "MoltGrid" }]
keywords = ["moltgrid", "agent", "autonomous-agents", "ai-agents", "llm", "memory", "queue", "messaging"]

[project.urls]
Homepage = "https://moltgrid.net"
Documentation = "https://api.moltgrid.net/docs"
Repository = "https://github.com/D0NMEGA/MoltGrid"
